@@ -1,58 +1,30 @@
 package uk.gov.hmcts.reform.pip.data.management.service.artefactsummary.nonstrategic;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.apache.commons.io.IOUtils;
 import org.assertj.core.api.SoftAssertions;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.springframework.test.context.ActiveProfiles;
-import uk.gov.hmcts.reform.pip.data.management.service.ListConversionFactory;
-import uk.gov.hmcts.reform.pip.data.management.service.artefactsummary.ArtefactSummaryData;
 import uk.gov.hmcts.reform.pip.model.publication.ListType;
 
 import java.io.IOException;
-import java.io.StringWriter;
-import java.nio.charset.Charset;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 
 @ActiveProfiles("test")
-class UtIacJudicialReviewDailyHearingListSummaryDataTest {
-
-    private static final String NON_STRATEGIC_RESOURCE_FOLDER = "src/test/resources/mocks/non-strategic/";
-    private static final String SUMMARY_SECTIONS_MESSAGE = "Summary sections count does not match";
-    private static final String SUMMARY_CASES_MESSAGE = "Summary cases count does not match";
-    private static final String SUMMARY_FIELDS_MESSAGE = "Summary fields count does not match";
-    private static final String SUMMARY_FIELD_KEY_MESSAGE = "Summary field key does not match";
-    private static final String SUMMARY_FIELD_VALUE_MESSAGE = "Summary field value does not match";
+class UtIacJudicialReviewDailyHearingListSummaryDataTest extends NonStrategicCommonArtefactSummaryTestConfig {
 
     @ParameterizedTest
     @EnumSource(
         value = ListType.class,
         names = {
-            "UT_IAC_JR_LONDON_DAILY_HEARING_LIST",
+            "UT_IAC_JR_LEEDS_DAILY_HEARING_LIST",
             "UT_IAC_JR_MANCHESTER_DAILY_HEARING_LIST",
             "UT_IAC_JR_BIRMINGHAM_DAILY_HEARING_LIST",
             "UT_IAC_JR_CARDIFF_DAILY_HEARING_LIST"
         })
     void testUtIacJudicialReviewDailyHearingListSummaryData(ListType listType) throws IOException {
-        StringWriter writer = new StringWriter();
-        IOUtils.copy(
-            Files.newInputStream(Paths.get(
-                NON_STRATEGIC_RESOURCE_FOLDER,
-                "utIacJudicialReviewDailyHearingList.json"
-            )), writer,
-            Charset.defaultCharset()
-        );
-
-        JsonNode payload = new ObjectMapper().readTree(writer.toString());
-        ArtefactSummaryData summaryData = new ListConversionFactory()
-            .getArtefactSummaryData(listType)
-            .get();
-        Map<String, List<Map<String, String>>> output = summaryData.get(payload);
+        Map<String, List<Map<String, String>>> output = getArtefactSummaryOutput(
+            "utIacJudicialReviewDailyHearingList.json", listType);
 
         SoftAssertions softly = new SoftAssertions();
 
@@ -65,7 +37,7 @@ class UtIacJudicialReviewDailyHearingListSummaryDataTest {
             .as(SUMMARY_CASES_MESSAGE)
             .hasSize(2);
 
-        Map<String, String> summaryFields = summaryCases.get(0);
+        Map<String, String> summaryFields = summaryCases.getFirst();
         softly.assertThat(summaryFields)
             .as(SUMMARY_FIELDS_MESSAGE)
             .hasSize(2);
