@@ -43,13 +43,17 @@ class UtIacJudicialReviewDailyHearingListFileConverterTest {
     private static final String HEARING_TIME = "Hearing time";
     private static final String HEARING_TIME_WELSH = "Amser y gwrandawiad";
     private static final String CASE_REFERENCE_NUMBER = "Case reference number";
+    private static final String CASE_REFERENCE_NUMBER_WELSH = "Cyfeirnod yr achos";
     private static final String JUDGES = "Judge(s)";
     private static final String JUDGES_WELSH = "Barnwr/Barnwyr";
     private static final String HEARING_TYPE = "Hearing type";
     private static final String HEARING_TYPE_WELSH = "Math o wrandawiad";
+    private static final String VENUE = "Venue";
     private static final String VENUE_WELSH = "Lleoliad";
     private static final String ADDITIONAL_INFORMATION = "Additional information";
     private static final String ADDITIONAL_INFORMATION_WELSH = "Gwybodaeth ychwanegol";
+    private static final String CASE_TITLE = "Case title";
+    private static final String CASE_TITLE_WELSH = "Deitl yr achos";
 
     private static final String LIST_DATE_ENGLISH = "List for 12 December 2024";
     private static final String LIST_DATE_WELSH = "Rhestr ar gyfer 12 December 2024";
@@ -57,6 +61,9 @@ class UtIacJudicialReviewDailyHearingListFileConverterTest {
         + "researcher or member of the public";
     private static final String OBSERVE_HEARING_WELSH = "Arsylwi gwrandawiad llys neu dribiwnlys fel newyddiadurwr, "
         + "ymchwilydd neu aelod o'r cyhoedd";
+
+    private static final String HEARING_VENUE = "This is a venue name";
+    private static final String HEARING_ADDITIONAL_INFORMATION = "This is additional information";
 
     private static final String HEADER_ELEMENT = "page-heading";
     private static final String LIST_DATE_ELEMENT = "list-date";
@@ -72,6 +79,7 @@ class UtIacJudicialReviewDailyHearingListFileConverterTest {
     private static final String IMPORTANT_INFORMATION_MESSAGE = "Important information heading does not match";
     private static final String BODY_MESSAGE = "Body does not match";
     private static final String TABLE_HEADERS_MESSAGE = "Table headers does not match";
+    private static final String TABLE_CONTENT_MESSAGE = "Table content does not match";
 
     private final NonStrategicListFileConverter converter = new NonStrategicListFileConverter();
 
@@ -79,27 +87,29 @@ class UtIacJudicialReviewDailyHearingListFileConverterTest {
 
     private static Stream<Arguments> parametersEnglish() {
         return Stream.of(
-            Arguments.of("UT_IAC_JR_LONDON_DAILY_HEARING_LIST", "utIacJrLondonDailyHearingList.json",
-                "Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: London Daily Hearing List"),
+            Arguments.of("UT_IAC_JR_LEEDS_DAILY_HEARING_LIST", "utIacJrLeedsDailyHearingList.json",
+                "Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: Leeds Daily Hearing List"),
             Arguments.of("UT_IAC_JR_MANCHESTER_DAILY_HEARING_LIST", "utIacJrManchesterDailyHearingList.json",
                 "Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: Manchester Daily Hearing List"),
             Arguments.of("UT_IAC_JR_BIRMINGHAM_DAILY_HEARING_LIST", "utIacJrBirminghamDailyHearingList.json",
                 "Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: Birmingham Daily Hearing List"),
             Arguments.of("UT_IAC_JR_CARDIFF_DAILY_HEARING_LIST", "utIacJrCardiffDailyHearingList.json",
-                "Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: Cardiff Daily Hearing List")
+                "Upper Tribunal (Immigration and Asylum) Chamber - Judicial Review: Bristol and Cardiff Daily "
+                    + "Hearing List")
         );
     }
 
     private static Stream<Arguments> parametersWelsh() {
         return Stream.of(
-            Arguments.of("UT_IAC_JR_LONDON_DAILY_HEARING_LIST", "utIacJrLondonDailyHearingList.json",
-        "Uwch Dribiwnlys (Mewnfudo a Lloches) - Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol Llundain"),
+            Arguments.of("UT_IAC_JR_LEEDS_DAILY_HEARING_LIST", "utIacJrLeedsDailyHearingList.json",
+        "Uwch Dribiwnlys (Mewnfudo a Lloches) - Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol Leeds"),
             Arguments.of("UT_IAC_JR_MANCHESTER_DAILY_HEARING_LIST", "utIacJrManchesterDailyHearingList.json",
         "Uwch Dribiwnlys (Mewnfudo a Lloches) - Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol Manceinion"),
             Arguments.of("UT_IAC_JR_BIRMINGHAM_DAILY_HEARING_LIST", "utIacJrBirminghamDailyHearingList.json",
         "Uwch Dribiwnlys (Mewnfudo a Lloches) - Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol Birmingham"),
             Arguments.of("UT_IAC_JR_CARDIFF_DAILY_HEARING_LIST", "utIacJrCardiffDailyHearingList.json",
-        "Uwch Dribiwnlys (Mewnfudo a Lloches) - Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol Caerdydd")
+        "Uwch Dribiwnlys (Mewnfudo a Lloches) – Rhestr o Wrandawiadau Dyddiol Siambr Adolygiadau Barnwrol "
+            + "Bryste a Chaerdydd")
         );
     }
 
@@ -153,13 +163,14 @@ class UtIacJudicialReviewDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Last updated 20 January 2025 at 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Important information");
 
         softly.assertThat(document.getElementById(LIST_UPDATE_MESSAGE_ELEMENT).text())
             .as(BODY_MESSAGE)
-            .contains("The following list is subject to change until 4:30pm");
+            .contains("The following list is subject to change until 4:30pm. Any alterations after this time "
+                          + "will be telephoned or emailed direct to the parties or their legal representatives.");
 
         softly.assertThat(document.getElementById(OBSERVE_HEARING_ELEMENT).text())
             .as(BODY_MESSAGE)
@@ -167,17 +178,37 @@ class UtIacJudicialReviewDailyHearingListFileConverterTest {
 
         softly.assertThat(document.getElementsByTag("th"))
             .as(TABLE_HEADERS_MESSAGE)
-            .hasSize(8)
+            .hasSize(7)
             .extracting(Element::text)
             .containsExactly(
-                HEARING_TIME,
-                "Applicant",
-                "Representative",
-                CASE_REFERENCE_NUMBER,
+                VENUE,
                 JUDGES,
+                HEARING_TIME,
+                CASE_REFERENCE_NUMBER,
+                CASE_TITLE,
                 HEARING_TYPE,
-                "Location",
                 ADDITIONAL_INFORMATION
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(14)
+            .extracting(Element::text)
+            .containsExactly(
+                HEARING_VENUE,
+                "Judge A",
+                "10:30am",
+                "1234",
+                "Case A",
+                "Hearing type A",
+                HEARING_ADDITIONAL_INFORMATION,
+                HEARING_VENUE,
+                "Judge B",
+                "11am",
+                "5678",
+                "Case B",
+                "Hearing type B",
+                HEARING_ADDITIONAL_INFORMATION
             );
 
         softly.assertAll();
@@ -224,13 +255,15 @@ class UtIacJudicialReviewDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Diweddarwyd ddiwethaf 20 January 2025 am 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Gwybodaeth bwysig");
 
         softly.assertThat(document.getElementById(LIST_UPDATE_MESSAGE_ELEMENT).text())
             .as(BODY_MESSAGE)
-            .contains("Gall y rhestr ganlynol newid tan 4:30pm.");
+            .contains("Gall y rhestr ganlynol newid tan 4:30pm. Bydd unrhyw newidiadau ar ôl yr amser hwn yn cael "
+                          + "eu cyfathrebu dros y ffôn neu drwy e-bost yn uniongyrchol at y partïon neu eu "
+                          +  "cynrychiolwyr cyfreithiol.");
 
         softly.assertThat(document.getElementById(OBSERVE_HEARING_ELEMENT).text())
             .as(BODY_MESSAGE)
@@ -238,17 +271,37 @@ class UtIacJudicialReviewDailyHearingListFileConverterTest {
 
         softly.assertThat(document.getElementsByTag("th"))
             .as(TABLE_HEADERS_MESSAGE)
-            .hasSize(8)
+            .hasSize(7)
             .extracting(Element::text)
             .containsExactly(
-                HEARING_TIME_WELSH,
-                "Ymgeisydd",
-                "Cynrychiolir gan",
-                "Cyfeirnod yr achos",
-                JUDGES_WELSH,
-                HEARING_TYPE_WELSH,
                 VENUE_WELSH,
+                JUDGES_WELSH,
+                HEARING_TIME_WELSH,
+                CASE_REFERENCE_NUMBER_WELSH,
+                CASE_TITLE_WELSH,
+                HEARING_TYPE_WELSH,
                 ADDITIONAL_INFORMATION_WELSH
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(14)
+            .extracting(Element::text)
+            .containsExactly(
+                HEARING_VENUE,
+                "Judge A",
+                "10:30am",
+                "1234",
+                "Case A",
+                "Hearing type A",
+                HEARING_ADDITIONAL_INFORMATION,
+                HEARING_VENUE,
+                "Judge B",
+                "11am",
+                "5678",
+                "Case B",
+                "Hearing type B",
+                HEARING_ADDITIONAL_INFORMATION
             );
 
         softly.assertAll();
